# larops

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  README.vi.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: larops.example.yaml
docs/: COMMANDS.md  OS_SUPPORT_MATRIX.md  PRODUCTION_RUNBOOK.md  TROUBLESHOOTING.md
docs/reviews/modules/: larops-production-backlog.md  larops-production-readiness.md
scripts/: install.sh  release.sh
src/larops/: __init__.py  cli.py  config.py  models.py  runtime.py
src/larops/commands/: __init__.py  alert.py  app.py  bootstrap.py  create.py  db.py  doctor.py  horizon.py  monitor.py  notify.py  observability.py  scheduler.py  secure.py  security.py  site.py  ssl.py  stack.py  worker.py
src/larops/core/: __init__.py  events.py  locks.py  shell.py
src/larops/services/: __init__.py  alert_service.py  app_lifecycle.py  (+28 more)
tests/: conftest.py  test_alert_cli.py  test_app_cli.py  test_bootstrap_cli.py  test_cli.py  test_config.py  test_create_cli.py  test_db_cli.py  test_db_offsite_service.py  test_doctor_cli.py  test_locks.py  test_monitor_cli.py  test_monitor_timer_cli.py  test_nginx_site_service.py  test_notify_cli.py  test_notify_systemd.py  test_observability_cli.py  test_permissions_cli.py  test_release_service.py  test_runtime_cli.py  test_runtime_process_systemd.py  test_secure_cli.py  test_security_cli.py  test_shell.py  test_site_cli.py  test_ssl_cli.py  test_stack_service.py  test_telegram_adapter.py
tests/integration/: test_db_engine_integration.py
